risolto il bug dove scompariva il form, risolto il bug visibilità password

--- a/css/index.css
+++ b/css/index.css
@@ -1,11 +1,11 @@
 
 .logo-gv {
-    width: 60%;
+    width: 50%;
     min-width: 3rem;
     max-width: 40rem;
 }
 .titolo {
-    font-size: clamp(.03rem, calc(1.7vw + 1rem), 5rem);
+    font-size: clamp(.01rem, calc(1.7vw + 0.9rem), 5rem);
 }
 .sotto-titolo {
     font-size: clamp(.1rem, calc(1.5vw + 0.5rem), 5rem);
